enhanced searching by enabling search by book author in addition to description embedding.